--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 *{margin: 0px; padding: 0px; box-sizing: border-box;}
 body{
   font-family:monospace;
-  /* background: linear-gradient(120deg,#2980b9,#8e44ad); */
+  background: linear-gradient(120deg,#2980b9,#8e44ad);
   
 }
 .main {
-  /* background: linear-gradient(120deg,#2980b9,#8e44ad); */
+  background: linear-gradient(120deg,#2980b9,#8e44ad);
   text-align: center;
   justify-content: center;
   display: flex; 
@@ -200,7 +200,7 @@ button{
 @media all and (max-width:500px){
   
     .sub-main {
-        display: flex;zzzz
+        display: flex;
         justify-content: center;
         height: 460px;
         width: 69%;
@@ -223,7 +223,7 @@ button{
         padding-bottom: 200px;
         background-color: #e1e3eb;
       }
-  /* .addvert_image{
+  .addvert_image{
     height: 230px;
     bottom: 20px;
     top: 500px;
@@ -234,7 +234,7 @@ button{
     padding: 1px 0 0 2px;
     border-radius: 20px;
     box-shadow: 1px 1px 1px 1px rgb(207, 207, 207);
-  } */
+  }
 
   .smain{
     width: 300px;
